--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <title>Vite + React</title>
+    <!-- Link fonts -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Saira:ital,wdth,wght@0,50..125,100..900;1,50..125,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Gleydson Lucena | Portifolio</title>
   </head>
   <body>
     <div id="root"></div>
